Сырая версия эндпоинтов /users
